Completed dsc-data-serialization-lab Lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -2244,7 +2244,7 @@
         "\"\"\"\n",
         "I think we would see this result because the its not the accurate question to\n",
         "ask. I think the better hypothesis to test would be the coorelatiopn between\n",
-        "the country and the finace resources poured a team sport program\n",
+        "the country and the financial resources poured a team sport program\n",
         "\"\"\""
       ]
     },
